[project]
name = "tiktokenizer"
version = "0.1.0"
description = "Convert HuggingFace tokenizers to tiktoken format"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Shaked Zychlinski" },
]
keywords = ["tokenizer", "tiktoken", "huggingface", "transformers", "nlp", "llm"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]
dependencies = [
    "tiktoken>=0.12.0",
    "transformers>=4.57.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
tiktokenizer = "tiktokenizer.cli:main"

[project.urls]
Homepage = "https://github.com/shakedzy/tiktokenizer"
Repository = "https://github.com/shakedzy/tiktokenizer"
Issues = "https://github.com/shakedzy/tiktokenizer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tiktokenizer"]

[tool.hatch.build.targets.sdist]
include = ["src/tiktokenizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
